====================================================================================================
1.2.3
====================================================================================================

* Adding new pre-recruit feature
  - This feature provides functionality to randomly select one individual in a household
  - Individuals are grouped into quotas and randomly selected

====================================================================================================
1.2.2
====================================================================================================

* Adding new participant multiedit operations
  - Certain roles may now edit multiple participants in a single operation

* Adding new feature to override quota restrictions
  - Every participant how has an "Override Quota" setting
  - Setting this setting to true will allow the participant to override quota restrictions
  - A new token attribute, "override quota" which reports the participant's value as 1 or 0

====================================================================================================
1.2.1
====================================================================================================

* Making changes to cognitive rescoring
  - typists can now rescore interviews
  - navigation buttons removed when rescoring
  - interviews can be rescored even after rescoring is complete

* Adding new role.all_sites column

  - Used to determine whether a role should be restricted to a single site or not
  - Many old references to "tier" have been replaced 

* Replacing assignment notes with participant notes
  - All existing assignment notes are converted to participant notes
  - Assignment notes no longer exist

* Adding new withdraw button in participant actions
  - Participants can now be withdrawn by clicking the "withdraw" button when viewing their file
  - Operators can still withdraw a participant during an assignment the same way as before
